[package]
name = "sbp2json"
version = "0.1.0"
authors = ["Jason Mobarak <jason@swiftnav.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
base64 = "0.12"
float-pretty-print = "0.1"
dtoa = "0.4"
structopt = "0.3"

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = "0.3"

[dependencies.sbp]
path = "../sbp"
features = ["sbp2json"]

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "sbp2json"
path = "src/sbp2json.rs"

[[bin]]
name = "json2sbp"
path = "src/json2sbp.rs"

[[bin]]
name = "json2json"
path = "src/json2json.rs"
