[package]
name = "sbp2json"
version = "2.7.7"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = "0.3"

[dependencies.sbp]
path = "../sbp"
features = ["sbp2json"]

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "sbp2json"
path = "src/sbp2json.rs"

[[bin]]
name = "json2sbp"
path = "src/json2sbp.rs"

[[bin]]
name = "json2json"
path = "src/json2json.rs"