"""Definition of linter tools

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds which aren't running linters.
"""

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//:__subpackages__"])

native_binary(
    name = "clang_tidy",
    src = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": "@x86_64-linux-llvm20//:clang-tidy",
            "@bazel_tools//src/conditions:darwin_arm64": "@aarch64-darwin-llvm20//:clang-tidy",
            "//conditions:default": "@x86_64-linux-llvm20//:clang-tidy",
        },
    ),
    out = "clang_tidy",
)
