name:                sbp
version:             (((release)))
synopsis:            SwiftNav's SBP Library
homepage:            https://github.com/swift-nav/libsbp
license:             MIT
author:              Swift Navigation Inc.
maintainer:          Mark Fine <dev@swiftnav.com>
copyright:           Copyright (C) 2015 Swift Navigation, Inc.
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

description:
  SwiftNav's SBP Library.

source-repository head
  type:              git
  location:          git@github.com:swift-nav/libsbp.git

library
((*- for m in modules *))
((*- if loop.first *))
  exposed-modules:   (((m)))
((*- else *))
                   , (((m)))
((*- endif *))
((*- endfor *))
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && < 5
                   , text
